[gd_scene load_steps=8 format=3 uid="uid://iw5axo36sipb"]

[ext_resource type="Script" path="res://ui.gd" id="1_fweh5"]
[ext_resource type="Texture2D" uid="uid://dwrmrsu78i5po" path="res://Bullets/Bullet_Red.png" id="2_0hsly"]
[ext_resource type="Texture2D" uid="uid://ccluchtcr75o8" path="res://Bullets/Bullet_Green.png" id="3_e18gw"]
[ext_resource type="Texture2D" uid="uid://cj3uvcrw73o6i" path="res://Bullets/Bullet_Blue.png" id="4_txl22"]
[ext_resource type="Texture2D" uid="uid://kjqgsy16i76y" path="res://Bullets/Bullet_Purple.png" id="5_nxlo3"]

[sub_resource type="QuadMesh" id="QuadMesh_7cowd"]
size = Vector2(2, 1)

[sub_resource type="QuadMesh" id="QuadMesh_tbc4r"]
size = Vector2(1500, 1000)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fweh5")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
self_modulate = Color(0.440979, 0.440979, 0.440979, 1)
position = Vector2(182, 1563)
scale = Vector2(153.5, 74.5)
mesh = SubResource("QuadMesh_7cowd")

[node name="BulletRed" type="Sprite2D" parent="MeshInstance2D"]
visible = false
position = Vector2(-0.775244, 0.0268457)
scale = Vector2(0.00651466, 0.0134228)
texture = ExtResource("2_0hsly")

[node name="BulletGreen" type="Sprite2D" parent="MeshInstance2D"]
visible = false
position = Vector2(0.0390879, 0.0134226)
scale = Vector2(0.00651466, 0.0134228)
texture = ExtResource("3_e18gw")

[node name="BulletBlue" type="Sprite2D" parent="MeshInstance2D"]
visible = false
position = Vector2(-0.37785, 0.0268456)
scale = Vector2(0.00651466, 0.0134228)
texture = ExtResource("4_txl22")

[node name="BulletPurple" type="Sprite2D" parent="MeshInstance2D"]
visible = false
position = Vector2(0.462541, 0)
scale = Vector2(0.00651466, 0.0134228)
texture = ExtResource("5_nxlo3")

[node name="Leveling_up_screen" type="MeshInstance2D" parent="."]
position = Vector2(806, 940)
mesh = SubResource("QuadMesh_tbc4r")

[node name="Label" type="Label" parent="Leveling_up_screen"]
offset_left = -375.125
offset_top = -234.625
offset_right = 378.875
offset_bottom = -124.625
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "Choose an Upgrade"

[node name="Upgrade1" type="Button" parent="Leveling_up_screen"]
offset_left = -710.0
offset_top = -43.0
offset_right = -289.0
offset_bottom = 361.0
theme_override_font_sizes/font_size = 40
text = "Upgrade 1"
autowrap_mode = 3

[node name="Upgrade2" type="Button" parent="Leveling_up_screen"]
offset_left = -196.0
offset_top = -39.0
offset_right = 253.0
offset_bottom = 348.0
theme_override_font_sizes/font_size = 40
text = "Upgrade 2"
autowrap_mode = 3

[node name="Upgrade3" type="Button" parent="Leveling_up_screen"]
offset_left = 303.0
offset_top = -32.0
offset_right = 723.0
offset_bottom = 343.0
theme_override_font_sizes/font_size = 40
text = "Upgrade 3"
autowrap_mode = 3

[connection signal="pressed" from="Leveling_up_screen/Upgrade1" to="." method="_on_upgrade_1_pressed"]
[connection signal="pressed" from="Leveling_up_screen/Upgrade2" to="." method="_on_upgrade_2_pressed"]
